[package]
name = "alon_sentinel"
version = "1.0.0"
edition = "2024"
rust-version = "1.95"
license = "AGPL-3.0-or-later"
default-run = "api"

[[bin]]
name = "api"
path = "src/bin/api.rs"
test = false

[[bin]]
name = "worker"
path = "src/bin/worker.rs"
test = false

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"
test = false

[[bin]]
name = "provision_client"
path = "src/bin/provision_client.rs"
test = false

[[bin]]
name = "provision_admin_user"
path = "src/bin/provision_admin_user.rs"
test = false

[[bin]]
name = "seed_admin_role_permissions"
path = "src/bin/seed_admin_role_permissions.rs"
test = false

[dependencies]
aes-gcm-siv = "0.11.1"
anyhow = "1.0.102"
argon2 = "0.5.3"
axum = "0.8.6"
chrono = { version = "0.4.44", features = ["clock"] }
dotenvy = "0.15.7"
futures = "0.3.32"
hex = "0.4.3"
hmac = "0.12.1"
lettre = { version = "0.11.19", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }
hickory-resolver = { version = "0.26.1", features = ["tokio"] }
lru = "0.18"
prometheus = "0.14"
rand = "0.9.2"
reqwest = { version = "0.13.2", features = ["json"] }
rustls = { version = "0.23.37", features = ["ring"] }
rustls-platform-verifier = "0.6.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "chrono", "uuid", "json", "derive", "macros"] }
tokio = { version = "1.51.0", features = ["full"] }
tokio-rustls = "0.26.4"
tower-http = { version = "0.6.6", features = ["cors", "set-header"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
x509-parser = "0.16"
